--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,10 +10,11 @@ dependencies:
   flutter:
     sdk: flutter
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   percent_indicator: ^2.1.1
+  bubble: ^1.1.9+1
+  speech_recognition: ^0.3.0
+  speech_to_text: ^2.1.0
 
 dev_dependencies:
   flutter_test:
