--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,8 +13,8 @@ dependencies:
   cupertino_icons: ^0.1.2
   percent_indicator: ^2.1.1
   bubble: ^1.1.9+1
-  speech_recognition: ^0.3.0
   speech_to_text: ^2.1.0
+  flutter_tts: ^1.0.0
 
 dev_dependencies:
   flutter_test:
