--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,8 @@ dependencies:
   cloud_firestore: ^0.13.5
   firebase_auth: ^0.16.0
   firebase_core: ^0.4.4+3
+  firebase_database: ^3.1.5
+  jiffy: ^3.0.1
 
 dev_dependencies:
   flutter_test:
