--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,8 @@ dependencies:
   firebase_auth: ^0.16.0
   firebase_core: ^0.4.4+3
   firebase_database: ^3.1.5
-  jiffy: ^3.0.1
+  charts_flutter: ^0.9.0
+  provider: ^4.1.2
 
 dev_dependencies:
   flutter_test:
