--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ description: A new Flutter application.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=1.16.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -23,6 +23,7 @@ dependencies:
   firebase_database: ^3.1.5
   charts_flutter: ^0.9.0
   provider: ^4.1.2
+  audioplayers: ^0.14.2
 
 dev_dependencies:
   flutter_test:
