--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   charts_flutter: ^0.9.0
   provider: ^4.1.2
   audioplayers: ^0.14.2
+  getflutter: ^1.0.11
 
 dev_dependencies:
   flutter_test:
