--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   provider: ^4.1.2
   audioplayers: ^0.14.2
   getflutter: ^1.0.11
+  flutter_animator: ^2.0.9
 
 dev_dependencies:
   flutter_test:
